K8S/prometheus-testing/ingress-test.yml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  namespace: "testing"
  name: "prometheus-testing"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "prometheus-testing.k3s"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "prometheus-testing"
                port:
                  number: 9090
